# air_drums

./: README.md  pyproject.toml
.github/workflows/: lint.yaml
air_drums/: __main__.py  hand_detection.py  hand_tracking.py  sound_player.py  ui_display.py
air_drums/detection/: hand_color_detection.py  hand_detection_ml.py  hand_motion_detection.py
