[tool.poetry]
name = "air-drums"
version = "0.1.0"
description = "A package to play drums on your camera."
authors = ["noblotni <noblotni@gmail.com>"]
readme = "README.md"
packages = [{include = "air_drums"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib-helper = "^1.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
